# tallyPrimeAPI

./: .gitignore  Bills_Receivables18_7_2025_16_20_02_.json  journal.xlsx  kb_companies_export.xlsx  logging_config.py  main.py  pyproject.toml  requirements.txt  run_script.bat  send_ctrl_shift_end.vbs  test.py  test.xlsx
Reports/: reports.py  sales_price_validation.py  salesman_order_validation.py
busy/: busy_utils.py  export_busy_reports.py  main_busy.py  test_rep1.py
busy/images/: j.bat
database/: busy_data_processor.py  db_crud.py  main_db.py  sql_connector.py  tally_data_processor.py  test_import.py
database/models/: base.py
database/models/busy_models/: busy_accounts.py  busy_accounts_rm.py  busy_item_rm.py  busy_items.py  busy_pricing.py  busy_reports.py  busy_reports_rm.py
database/models/kbe_models/: export_models.py  tally_kbe_models.py
database/models/tally_models/: tally_report_models.py
database/models/trackwick/: trackwick_models.py
database/tests/: test_sql_connector.py  tests_apply_transformation.py  tests_db_crud.py  tests_excel_cleanup.py  tests_tables.py
main_reports/: reports.py
tally/: api_utils.py  main_tally.py  tally_utils.py
trackwick/: api_data.py  main_trackwick.py
trackwick/api/: api_config.py
utils/: common_utils.py  email.py
